<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <EditText
        android:id="@+id/et_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/package_name_hint"
        android:inputType="textCapCharacters"
        android:maxLines="1"/>

    <Button
        android:id="@+id/btn_get_signature_key_hash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/get_signature_key_hash"
        app:layout_constraintTop_toBottomOf="@id/et_input"
        android:onClick="onClick"/>

    <ScrollView
        android:id="@+id/sv_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_get_signature_key_hash">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@android:color/holo_red_dark"/>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="1">
                <TableRow
                    android:layout_marginTop="1dp"
                    android:background="@color/colorTextBackground">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="end"
                        android:textSize="14sp"
                        android:textColor="@color/colorTextLabel"
                        android:text="@string/key_hash_label"
                        android:longClickable="true"/>
                    <TextView
                        android:id="@+id/tv_key_hash"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="start"
                        android:textSize="14sp"
                        android:textColor="@color/colorTextBlack"
                        android:focusable="true"
                        android:clickable="true"
                        android:onClick="onClick"/>
                </TableRow>
                <TableRow
                    android:layout_marginTop="1dp"
                    android:background="@color/colorTextBackground">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="end"
                        android:textSize="14sp"
                        android:textColor="@color/colorTextLabel"
                        android:text="@string/md5_fingerprint_label"/>
                    <TextView
                        android:id="@+id/tv_md5_fingerprint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="start"
                        android:textSize="14sp"
                        android:textColor="@color/colorTextBlack"
                        android:focusable="true"
                        android:clickable="true"
                        android:onClick="onClick"/>

                </TableRow>
                <TableRow
                    android:layout_marginTop="1dp"
                    android:background="@color/colorTextBackground">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="end"
                        android:textSize="14sp"
                        android:textColor="@color/colorTextLabel"
                        android:text="@string/sha1_fingerprint_label"/>
                    <TextView
                        android:id="@+id/tv_sha1_fingerprint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="start"
                        android:textSize="14sp"
                        android:textColor="@color/colorTextBlack"
                        android:focusable="true"
                        android:clickable="true"
                        android:onClick="onClick"/>
                </TableRow>
                <TableRow
                    android:layout_marginTop="1dp"
                    android:background="@color/colorTextBackground">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="end"
                        android:textSize="14sp"
                        android:textColor="@color/colorTextLabel"
                        android:text="@string/sha256_fingerprint_label"/>
                    <TextView
                        android:id="@+id/tv_sha256_fingerprint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="start"
                        android:textSize="14sp"
                        android:minLines="3"
                        android:maxLines="3"
                        android:textColor="@color/colorTextBlack"
                        android:focusable="true"
                        android:clickable="true"
                        android:onClick="onClick"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="#FF808080"
        android:alpha="0.4"
        android:text="@string/powered_by"/>
</android.support.constraint.ConstraintLayout>